config/deploy/ingress_preprod/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - bridgevision-preprod.eastus.cloudapp.azure.com
    - bridgepreprod.metova.com
    secretName: tls-secret
  rules:
  - host: bridgevision-preprod.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: webapp
          servicePort: 3000
  - host: bridgepreprod.metova.com
    http:
      paths:
      - path: /
        backend:
          serviceName: webapp
          servicePort: 3000
